--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
             <button id="btnShaker" onclick="toggleDispositivo('shaker', 'btnShaker')">ON</button>
           </div>
         </div>
+        <div class="fila">
+          </div class = "grupo-ph">
+            <label for="pH">pH</label>
+            <label for="pH-value">0.00</label>
+          </div>
+          </div class = "grupo-conductividad">
+            <label for="conductividad">Conductividad</label>
+            <label for="conductividad-value">0.00</label>
+          </div>
+        </div>
+        <div class="fila">
+          </div class = "grupo-temperatura">
+            <label for="temperatura">Temperatura</label>
+            <label for="temperatura-value">0.00</label>
+          </div> 
+          </div class = "grupo-turbidez">
+            <label for="turbidez">Turbidez</label>
+            <label for="turbidez-value">0.00</label>
+          </div>
+        </div>
         <div class="fila fila-centro">
           <button onclick="publicarAccion('iniciar')">Iniciar</button>
           <button onclick="publicarAccion('reanudar')">Reanudar</button>
