--- a/index.html
+++ b/index.html
@@ -41,29 +41,20 @@
             <button id="btnShaker" onclick="toggleDispositivo('shaker', 'btnShaker')">ON</button>
           </div>
         </div>
-        <div class="fila">
-          <div class = "grupo-ph">
-            <label for="pH">pH</label>
-            <label for="pH-value">0.00</label>
+        <div class="contenedor-flex">
+          <!-- Columna izquierda: Lecturas -->
+          <div class="medidas-sensores">
+            <div><label>Turbidez:</label> <span id="turbidez-value">0.00</span></div>
+            <div><label>Temperatura:</label> <span id="temperatura-value">0.00</span></div>
+            <div><label>pH:</label> <span id="ph-value">0.00</span></div>
+            <div><label>Conductividad:</label> <span id="conductividad-value">0.00</span></div>
           </div>
-          <div class = "grupo-conductividad">
-            <label for="conductividad">Conductividad</label>
-            <label for="conductividad-value">0.00</label>
+
+          <!-- Columna derecha: Botones -->
+          <div class="columna-botones">
+            <button class="boton-columna" onclick="publicarAccion('iniciar')">Iniciar</button>
+            <button class="boton-columna" onclick="publicarAccion('reanudar')">Reanudar</button>
           </div>
-        </div>
-        <div class="fila">
-          <div class = "grupo-temperatura">
-            <label for="temperatura">Temperatura</label>
-            <label for="temperatura-value">0.00</label>
-          </div> 
-          <div class = "grupo-turbidez">
-            <label for="turbidez">Turbidez</label>
-            <label for="turbidez-value">0.00</label>
-          </div>
-        </div>
-        <div class="fila fila-centro">
-          <button onclick="publicarAccion('iniciar')">Iniciar</button>
-          <button onclick="publicarAccion('reanudar')">Reanudar</button>
         </div>
       </div>
       <div class="panel-inferior">
