cambios en js, html y css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="grupo-control-uv">
             <label>UV:</label>
-            <button id="btnUV" onclick="toggleDispositivo('uv', 'btnUV')">ON</button>
+            <button id="btnUV" class="ON" onclick="toggleDispositivo('uv', 'btnUV')">ON</button>
           </div>
         </div>
         <div class="fila">
@@ -38,7 +38,7 @@
           </div>
           <div class="grupo-control-shaker">
             <label>Shaker:</label>
-            <button id="btnShaker" onclick="toggleDispositivo('shaker', 'btnShaker')">ON</button>
+            <button id="btnShaker" class="ON" onclick="toggleDispositivo('shaker', 'btnShaker')">ON</button>
           </div>
         </div>
         <div class="contenedor-flex">
