últimos cambios del día en css y html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="grupo-dosis-hierro">
             <label for="hierro">Hierro (mL):</label>
             <input type="number" id="hierro">
-            <button onclick="enviarOK('hierro')">OK</button>
+            <button class="boton-ok" onclick="enviarOK('hierro')">OK</button>
           </div>
           <div class="grupo-control-uv">
             <label>UV:</label>
@@ -34,7 +34,7 @@
           <div class="grupo-dosis-citrato">
             <label for="citrato">Citrato (mL):</label>
             <input type="number" id="citrato">
-            <button onclick="enviarOK('citrato')">OK</button>
+            <button class="boton-ok" onclick="enviarOK('citrato')">OK</button>
           </div>
           <div class="grupo-control-shaker">
             <label>Shaker:</label>
